Interface improvements, CSS tweaks and displaying only one 'marked' message at a time to prevent them from overlapping each other.

--- a/fivestar.css
+++ b/fivestar.css
@@ -9,15 +9,9 @@ form.fivestar-widget input {
 }
 
 /* Combo Static and Rate Widget */
-.fivestar-combo-stars .fivestar-form-item {
-  float: left;
-}
 .fivestar-combo-stars .fivestar-static-form-item {
   float: left;
   margin-right: 40px;
-}
-.fivestar-combo-stars .description {
-  clear: left;
 }
 
 /* Fivestar form items */
